@@ -288,6 +288,14 @@
 #     See help on Zapper Masks (AHELP ZAPPERMASKS) for basic syntax.  Area zapper
 #     masks can check LEVEL for median mob level, alignment for median alignment.
 #
+# ... EVENT="AREAVISIT" NUM=[NUMBER] TIME_MINS=[MINS] AREAMASK="[ZAPPERMASK]" PLAYERMASK="[ZAPPERMASK]"  ...
+#     [NUM] is the number of times the area must be visited
+#     [AREAMASK] is a required zappermask to apply to the area visited.
+#     [TIME_MINS] is min number of minutes between visits to get credit
+#     [PLAYERMASK] is an optional state that the player must be in when entering
+#     See help on Zapper Masks (AHELP ZAPPERMASKS) for basic syntax.  Area zapper
+#     masks can check LEVEL for median mob level, alignment for median alignment.
+#
 # Some achievement events are updated every mud-hour (10 mins) automatically by 
 # the system for all players on-line and in memory.
 #
