@@ -384,7 +384,6 @@ only small number of limited attributes of the planes will be \
 applied, such as SPECFLAGS, BONUSDAMAGESTAT, RECOVERRATE, WEAPONMAXRANGE, and REQWEAPONS. \
 The Plane Name is case sensitive and must match an entry in planesofexistence.txt
 
-
 IMMUNITIES=\
 Ability    : Immunities\n\r\
 Parameters : [LIST OF IMMUNITIES]\n\r\
