@@ -27,7 +27,8 @@
  26. Grinder Area editor now includes Mobs and Items editors.
  26. Grinder area editor now includes a Tree selector for Areas
  27. New Planar reactions/faction, new eliteing system for planes.  See planesofexistence.txt
- 
+ 28. New achievement type: AREAVISIT
+  
 # Build 5.9.9 Release 12/18/2019
   * Minor database change: CMQUESID in CMQUESTS, CMRCID in CMGRAC, CMPKEY in CMPDAT enlarged.  Mostly optional.
   1. New prayers: empower unholy weapon, morph unholy weapon, faithful hellhound, discipline
